** Modified css class tabLabelsContainer to have relative position and higher z-index ** Added new css class fixedSizedTabContent for absolute positioned tab contents ** Resized reports iframe height to 100% ** Added new css rule to #viewReportViewerContainer

--- a/trunk/Pyramus/WebContent/css/tabs.css
+++ b/trunk/Pyramus/WebContent/css/tabs.css
@@ -4,6 +4,8 @@
   display:table;
   clear:both;
   padding-left:13px;
+  position:relative;
+  z-index:2;
 }
 
 a.tabLabel {
@@ -178,4 +180,10 @@ a.activeTabLabel{
   background:#fff;
 }
 
-
+.fixedSizedTabContent{
+	position:absolute;
+	top:73px;
+	bottom:0;
+	left:0;
+	right:0;
+}
